Source/IntegrationTests/TestFiles/LitTests/LitTest/dafny0/snapshots/Inputs/Snapshots3.v1.dfy
method M()
{
  if (*)
  {
    assert true;
  }
  else
  {
    assert 0 != 0;  // error
  }
}
